--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "magento/module-grouped-product-sample-data": "100.2.*",
         "magento/module-offline-shipping-sample-data": "100.2.*",
         "magento/sample-data-media": "100.2.*",
-        "magento/module-swatches-sample-data": "100.2.*"
+        "magento/module-swatches-sample-data": "100.2.*",
+        "igorludgero/correios": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.2.0",
